--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
-#root {
+/* #root {
   max-width: 1280px;
   margin: 0 auto;
-  padding: 2rem;
+  padding: 1rem;
   text-align: center;
 }
 
@@ -39,4 +39,41 @@
 
 .read-the-docs {
   color: #888;
+} */
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
+
+#root {
+  background-color: #F2F2F2;
+  height: 100vh;
+}
+
+/* .nav-container {
+  display: flex;
+  justify-content: space-between;
+} */
+.active{
+  background-color: #0011ff;
+  color: #fff;
+  width: auto;
+  height: auto;
+  font-size: 20px;
+  transition: .3s ease-in-out;
+}
+
+li{
+  color: #FFA500;
+  font-size: 20px;
+}
+
+
+li:hover {
+  cursor: pointer;
+  color: blue;
+  transition: .3s ease-in-out;
+}
+
